# cuenv

./: .editorconfig  .envrc  .gitattributes  .gitignore  .release-please-manifest.json  .rules.cue  AGENTS.md  ARCHITECTURE_REFACTOR.md  CLAUDE.md  CLEANUP.md  Cargo.nix  Cargo.toml  HOMEBREW_TAP.md  PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  README.md  REFACTOR.md  ROADMAP.md  TEST_COVERAGE_ANALYSIS.md  antora-playbook.yml  claude-loop.sh  clippy.toml  codex-review.md  deny.toml  devenv.nix  devenv.yaml  env.cue  flake.nix  flakehub.json  lcov.info  llms.txt  package.json  ralph-wiggum-coverage.sh  readme.md  release-please-config.json  release.toml  result  (+4 more)
apps/cuetty/: .gitignore  Cargo.toml  README.md  flake.nix
apps/cuetty/src/: lib.rs  main.rs  pty.rs  terminal_responses.rs  theme.rs  ui.rs
crates/1password/: Cargo.toml
crates/1password/src/: lib.rs
crates/1password/tests/: wasm_init_tests.rs
crates/aws/: Cargo.toml
crates/aws/src/: lib.rs  secrets.rs
crates/buildkite/: Cargo.toml
crates/buildkite/src/: emitter.rs  lib.rs  provider.rs  schema.rs
crates/cache/: Cargo.toml
crates/cache/src/: error.rs  lib.rs  tasks.rs
crates/cas/: Cargo.toml
crates/cas/src/: action_cache.rs  cas.rs  digest.rs  error.rs  lib.rs  merkle.rs  message.rs
crates/cas/tests/: action_digest_properties.rs
crates/ci/: CHANGELOG.md  Cargo.toml  README.md  sbom.json.xml
crates/ci/src/: affected.rs  affected_tests.rs  context.rs  diff.rs  discovery.rs  emitter.rs  executor.rs  gc.rs  lib.rs  pipeline.rs  render.rs
crates/ci/tests/: ir_contributor_tests.rs
crates/codegen/: CHANGELOG.md  Cargo.toml  README.md
crates/codegen/examples/: simple-api.cue
crates/codegen/src/: blueprint.rs  codegen.rs  config.rs  cube.rs  formatter.rs  generator.rs  lib.rs
crates/codegen/tests/: integration_tests.rs
crates/codeowners/: Cargo.toml
crates/codeowners/src/: lib.rs
crates/core/: CHANGELOG.md  Cargo.toml  sbom.json.xml
crates/core/src/: affected.rs  ci.rs  ci_tests.rs  contributors.rs  environment.rs  environment_tests.rs  http.rs  lib.rs  module.rs  owners.rs  paths.rs  runtime.rs  schema_tests.rs  shell.rs  sync.rs  test_utils.rs  tests.rs
crates/core/tests/: cache_integration_tests.rs  cache_roundtrip.rs  error_tests.rs  proptest_cache_tests.rs  schema_conformance.rs  task_backend_tests.rs  task_index_tests.rs
crates/cuengine/: CHANGELOG.md  CLAUDE.md  Cargo.toml  bridge.go  bridge_test.go  build.rs  cuengine.cdx.json  cuengine.cdx.xml  go.mod  go.sum  libcue_bridge.h  license.md  metadata.go  sbom.json.xml  values.go
crates/cuengine/benches/: evaluation_benchmarks.rs
crates/cuengine/src/: builder.rs  cache.rs  error.rs  lib.rs  retry.rs  tests.rs  validation.rs
crates/cuengine/tests/: builder_tests.rs  environment_tests.rs  error_handling_tests.rs  ffi_edge_cases.rs  integration_tests.rs  module_evaluation_tests.rs  package_filter_tests.rs  proptest_tests.rs  reference_resolution_tests.rs  retry_tests.rs  task_output_name_tests.rs  thread_safety_tests.rs  validation_tests.rs
crates/cuenv/: CHANGELOG.md  Cargo.toml  build.rs  sbom.json.xml
crates/cuenv-cli/: Cargo.toml  cuenv-cli.cdx.xml  sbom.json.xml
crates/cuenv-cli/src/: cli.rs  errors.rs  main.rs  performance.rs  shutdown.rs  tracing.rs
crates/cuenv-cli/tests/: bdd.rs  cross_project_deps.rs  e2e_garbage_hook.rs  exec_hooks_wait.rs  integration_tests.rs  multiline_hook.rs  task_exec_integration.rs
crates/cuenv-core/: CHANGELOG.md  Cargo.toml  cuenv-core.cdx.json  cuenv-core.cdx.xml  sbom.json.xml
crates/cuenv-core/src/: approval.rs  ci.rs  environment.rs  environment_test.rs  lib.rs  metrics.rs  schema_tests.rs  task.rs  task_executor.rs  task_graph.rs
crates/cuenv-core/tests/: error_tests.rs  limits_tests.rs  schema_conformance.rs
crates/cuenv/src/: async_dispatch.rs  builder.rs  cli.rs  cli_tests.rs  completions.rs  hook_supervisor.rs  lib.rs  main.rs  main_tests.rs  oci_activate.rs  performance.rs  provider.rs  providers.rs  registry.rs  sync_dispatch.rs  tracing.rs
crates/cuenv/tests/: bdd.rs  contributor_integration.rs  cross_project_deps.rs  e2e_garbage_hook.rs  evaluation_count.rs  examples_dag_tests.rs  exec_hooks_wait.rs  export_performance.rs  integration_tests.rs  multiline_hook.rs  nix_flake_hook.rs  nix_flake_path.rs  node_tool_integration.rs  schema_project_base_tests.rs  shell_hook.rs  stress_tests.rs  sync_scope_rules.rs  task_exec_integration.rs  taskref_hook_dep_chain.rs  trace_acceptance.rs  tui_replay.rs  vcs_subdir_e2e.rs
crates/dagger/: CHANGELOG.md  Cargo.toml
crates/dagger/src/: lib.rs
crates/editorconfig/: Cargo.toml
crates/editorconfig/src/: builder.rs  error.rs  lib.rs  result.rs  section.rs
crates/events/: CHANGELOG.md  Cargo.toml  sbom.json.xml
crates/events/benches/: json_renderer.rs
crates/events/src/: bus.rs  event.rs  event_tests.rs  layer.rs  lib.rs  macros.rs  metadata.rs  redaction.rs
crates/gcp/: Cargo.toml
crates/gcp/src/: lib.rs  secrets.rs
crates/github/: Cargo.toml
crates/github/src/: ci.rs  codeowners.rs  config.rs  lib.rs  release.rs
crates/github/tests/: ci_provider_tests.rs
crates/gitlab/: Cargo.toml
crates/gitlab/src/: codeowners.rs  lib.rs
crates/homebrew/: Cargo.toml
crates/homebrew/src/: backend.rs  formula.rs  lib.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: approval.rs  approval_tests.rs  error.rs  executor.rs  executor_tests.rs  lib.rs  state.rs  state_tests.rs  types.rs
crates/iac/: Cargo.toml  build.rs
crates/iac/proto/: tfplugin6.proto
crates/iac/src/: config.rs  error.rs  events.rs  lib.rs
crates/ignore/: Cargo.toml
crates/ignore/src/: lib.rs  sections.rs  tests.rs
crates/infisical/: Cargo.toml
crates/infisical/src/: lib.rs
crates/oci-provider/: Cargo.toml
crates/oci-provider/src/: cache.rs  error.rs  extract.rs  homebrew.rs  lib.rs  platform.rs  registry.rs
crates/release/: CHANGELOG.md  Cargo.toml  sbom.json.xml
crates/release/src/: artifact.rs  (+11 more)
crates/remote/: Cargo.toml  build.rs
crates/schema-validator/: Cargo.toml  sbom.json.xml  schema-validator.cdx.xml
(+995 files in other folders)
