[workspace]
resolver = "2"
members = [
    "crates/events",
    "crates/secrets",
    "crates/core",
    "crates/dagger",
    "crates/cuengine",
    "crates/cuenv",
    "crates/workspaces",
    "crates/ci",
    "crates/release",
    "crates/ignore",
    "crates/codeowners",
    "crates/cubes",
    # Platform-specific provider crates
    "crates/github",
    "crates/gitlab",
    "crates/bitbucket",
    "crates/buildkite",
    "crates/homebrew",
    # Secret provider crates
    "crates/aws",
    "crates/gcp",
    "crates/vault",
    "crates/1password",
]

[workspace.package]
version = "0.19.1"
edition = "2024"
authors = ["cuenv Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/cuenv/cuenv"
homepage = "https://github.com/cuenv/cuenv"
documentation = "https://docs.rs/cuenv"
readme = "readme.md"
keywords = ["cue", "configuration", "validation", "ffi"]
categories = ["config", "development-tools", "parsing"]

[workspace.dependencies]
cuenv-events = { path = "crates/events", version = "0.19.0" }
cuenv-secrets = { path = "crates/secrets", version = "0.19.0" }
cuenv-core = { path = "crates/core", version = "0.19.0" }
cuenv-dagger = { path = "crates/dagger", version = "0.19.0" }
cuenv-workspaces = { path = "crates/workspaces", version = "0.19.0" }
cuenv-ci = { path = "crates/ci", version = "0.19.0" }
cuenv-release = { path = "crates/release", version = "0.19.0" }
cuenv-ignore = { path = "crates/ignore", version = "0.19.0" }
cuenv-codeowners = { path = "crates/codeowners", version = "0.19.0" }
cuenv-cubes = { path = "crates/cubes", version = "0.19.0" }
cuengine = { path = "crates/cuengine", version = "0.19.0" }
# Platform-specific provider crates
cuenv-github = { path = "crates/github", version = "0.19.0" }
cuenv-gitlab = { path = "crates/gitlab", version = "0.19.0" }
cuenv-bitbucket = { path = "crates/bitbucket", version = "0.19.0" }
cuenv-buildkite = { path = "crates/buildkite", version = "0.19.0" }
cuenv-homebrew = { path = "crates/homebrew", version = "0.19.0" }
# Secret provider crates
cuenv-aws = { path = "crates/aws", version = "0.19.0" }
cuenv-gcp = { path = "crates/gcp", version = "0.19.0" }
cuenv-vault = { path = "crates/vault", version = "0.19.0" }
cuenv-1password = { path = "crates/1password", version = "0.19.0" }
schemars = "1.0.4"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }
miette = { version = "7.0", features = ["fancy"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.8.3"
# New dependencies for hook execution system
dirs = "6.0"
sha2 = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
futures = "0.3"

# Binary distribution
bytes = "1.10"
flate2 = "1.1"
tar = "0.4"

# Workspace detection and parsing dependencies
toml = "0.9"
toml_edit = "0.23"

# Git and conventional commits
git-conventional = "0.12"
gix = { version = "0.75", default-features = false, features = ["revision"] }
serde_yaml = "0.9"
glob = "0.3"

# Testing dependencies
proptest = "1.0"
criterion = "0.8"
tempfile = "3.0"

# BDD testing dependencies
cucumber = "0.22"
gherkin = "0.14"
tokio-test = "0.4"

[workspace.metadata.crane]
name = "cuenv"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
# Prevent direct console output - use cuenv_events emit macros instead
print_stdout = "warn"
print_stderr = "warn"
