[workspace]
resolver = "2"
members = [
    "crates/events",
    "crates/secrets",
    "crates/core",
    "crates/hooks",
    "crates/cache",
    "crates/task-graph",
    "crates/task-discovery",
    "crates/dagger",
    "crates/cuengine",
    "crates/cuenv",
    "crates/workspaces",
    "crates/ci",
    "crates/release",
    "crates/ignore",
    "crates/editorconfig",
    "crates/codeowners",
    "crates/codegen",
    # Platform-specific provider crates
    "crates/github",
    "crates/gitlab",
    "crates/bitbucket",
    "crates/buildkite",
    "crates/homebrew",
    # Secret provider crates
    "crates/1password",
    # Tool provider crates
    "crates/tools/oci",
    "crates/tools/github",
    "crates/tools/nix",
    "crates/tools/rustup",
]

[workspace.package]
version = "0.26.9"
edition = "2024"
authors = ["cuenv Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/cuenv/cuenv"
homepage = "https://github.com/cuenv/cuenv"
documentation = "https://docs.rs/cuenv"
readme = "readme.md"
keywords = ["cue", "configuration", "validation", "ffi"]
categories = ["config", "development-tools", "parsing"]

[workspace.dependencies]
cuenv-events = { path = "crates/events", version = "0.26.0" }
cuenv-secrets = { path = "crates/secrets", version = "0.26.0" }
cuenv-core = { path = "crates/core", version = "0.26.0" }
cuenv-hooks = { path = "crates/hooks", version = "0.26.0" }
cuenv-cache = { path = "crates/cache", version = "0.26.0" }
cuenv-task-graph = { path = "crates/task-graph", version = "0.26.0" }
cuenv-task-discovery = { path = "crates/task-discovery", version = "0.26.0" }
cuenv-dagger = { path = "crates/dagger", version = "0.26.0" }
cuenv-workspaces = { path = "crates/workspaces", version = "0.26.0" }
cuenv-ci = { path = "crates/ci", version = "0.26.0" }
cuenv-release = { path = "crates/release", version = "0.26.0" }
cuenv-ignore = { path = "crates/ignore", version = "0.26.0" }
cuenv-editorconfig = { path = "crates/editorconfig", version = "0.26.0" }
cuenv-codeowners = { path = "crates/codeowners", version = "0.26.0" }
cuenv-codegen = { path = "crates/codegen", version = "0.26.0" }
cuengine = { path = "crates/cuengine", version = "0.26.0" }
# Platform-specific provider crates
cuenv-github = { path = "crates/github", version = "0.26.0" }
cuenv-gitlab = { path = "crates/gitlab", version = "0.26.0" }
cuenv-bitbucket = { path = "crates/bitbucket", version = "0.26.0" }
cuenv-buildkite = { path = "crates/buildkite", version = "0.26.0" }
cuenv-homebrew = { path = "crates/homebrew", version = "0.26.0" }
# Secret provider crates
cuenv-1password = { path = "crates/1password", version = "0.26.0" }
# Tool provider crates
cuenv-tools-oci = { path = "crates/tools/oci", version = "0.1.0" }
cuenv-tools-github = { path = "crates/tools/github", version = "0.1.0" }
cuenv-tools-nix = { path = "crates/tools/nix", version = "0.1.0" }
cuenv-tools-rustup = { path = "crates/tools/rustup", version = "0.1.0" }
schemars = "1.2.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libc = "0.2"
tokio = { version = "1.49", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
miette = { version = "7.6", features = ["fancy"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.8.3"
# New dependencies for hook execution system
dirs = "6.0"
sha2 = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
futures = "0.3"


# Binary distribution
bytes = "1.11"
flate2 = "1.1"
tar = "0.4"

# Workspace detection and parsing dependencies
toml = "0.9"
toml_edit = "0.23"

# Git and conventional commits
git-conventional = "0.12"
gix = { version = "0.77", default-features = false, features = ["revision", "blob-diff"] }
semver = "1"
serde_yaml = "0.9"
glob = "0.3"

# Testing dependencies
proptest = "1.10"
criterion = "0.8"
tempfile = "3.25"
temp-env = { version = "0.3", features = ["async_closure"] }

# BDD testing dependencies
cucumber = "0.22"
gherkin = "0.14"
tokio-test = "0.4"

[workspace.metadata.crane]
name = "cuenv"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
# Lint groups at lower priority so individual overrides take precedence
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Transitive dependencies often bring in multiple versions - this is unavoidable
multiple_crate_versions = "allow"

# These lints have aggressive thresholds in clippy.toml (50 lines, 5 args, 15 complexity)
# Many established functions exceed them - allow at workspace level, address individually
too_many_lines = "allow"
too_many_arguments = "allow"
cognitive_complexity = "allow"

# Pedantic lints that are too noisy for established codebase
iter_on_single_items = "allow"
unnecessary_literal_bound = "allow"
implicit_hasher = "allow"
unnecessary_map_or = "allow"
uninlined_format_args = "allow"
redundant_closure_for_method_calls = "allow"
as_ptr_cast_mut = "allow"
significant_drop_tightening = "allow"
missing_const_for_fn = "allow"
needless_collect = "allow"
doc_markdown = "allow"
option_if_let_else = "allow"
redundant_clone = "allow"
missing_panics_doc = "allow"
derive_partial_eq_without_eq = "allow"
or_fun_call = "allow"
needless_pass_by_ref_mut = "allow"

# Prevent direct console output - use cuenv_events emit macros instead
print_stdout = "warn"
print_stderr = "warn"

# Restriction cherry-picks (strict error handling)
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"

# Build Profiles for faster compilation
# See: https://doc.rust-lang.org/cargo/reference/profiles.html

[profile.dev]
incremental = true
debug = "line-tables-only"

[profile.dev.package."*"]
# Optimize dependencies even in dev mode for faster runtime
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 16

[profile.ci]
inherits = "dev"
incremental = false

[profile.quick]
inherits = "dev"
opt-level = 0
debug = 0
incremental = true
