[package]
name = "cuenv-1password"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "1Password integration for the cuenv ecosystem"

[lints]
workspace = true

[dependencies]
cuenv-secrets = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

# 1Password WASM SDK
extism = "1"
dirs = { workspace = true }
once_cell = "1.21"
getrandom = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
