[package]
name = "cuenv-aws"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "AWS integration for the cuenv ecosystem"

[lints]
workspace = true

[dependencies]
cuenv-secrets = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

# AWS SDK
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-sdk-secretsmanager = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"] }

[dev-dependencies]
tokio-test = { workspace = true }
