[package]
name = "cuenv-buildkite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools", "development-tools::build-utils"]
readme = "../../readme.md"
description = "Buildkite CI emitter and provider for cuenv"
publish = false

[lints]
workspace = true

[dependencies]
cuenv-ci = { workspace = true }
cuenv-core = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
temp-env = "0.3"
