[package]
name = "cuenv-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Content-addressed task caching for cuenv"

[features]
default = []

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = "0.4"

# Time handling
chrono = { workspace = true }

# Error handling
thiserror = "2.0"
miette = { workspace = true }

# Path resolution
dirs = { workspace = true }

# File operations
walkdir = "2.5"
tar = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }

# Logging
tracing = { workspace = true }

# Secret redaction
cuenv-events = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
