[package]
name = "cuenv-cas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Content-addressed store and action cache for cuenv, modelled on the Bazel Remote Execution API"

[features]
default = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
chrono = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
walkdir = "2.5"
tempfile = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
