[package]
name = "cuenv-ci"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools", "development-tools::build-utils"]
readme = "../../readme.md"
description = "Context-aware CI pipeline execution for cuenv"

[lints]
workspace = true

[dependencies]
cuenv-core = { workspace = true }
cuenv-secrets = { workspace = true }
cuenv-workspaces = { workspace = true }
cuenv-tools-nix = { path = "../tools/nix" }
cuenv-tools-github = { path = "../tools/github" }
cuenv_tools_rustup = { path = "../tools/rustup" }
cuengine = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
cuenv-events = { workspace = true }
dirs = { workspace = true }
glob = "0.3"
regex = "1.10"
sha2 = { workspace = true }
hex = "0.4"
uuid = { workspace = true }
petgraph = { workspace = true }


[dev-dependencies]
tempfile = "3"
temp-env = "0.3"
proptest = "1.4"

# We'll stick to shelling out to git for now as per spec preference for "native reporting"
# but we might need git2 later if we want tighter integration.
# For now, standard process execution is safer/simpler for "git diff" logic.
