[package]
name = "cuenv-codeowners"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools", "command-line-utilities"]
readme = "../../readme.md"
description = "Generate CODEOWNERS files for GitHub, GitLab, and Bitbucket"

[features]
default = []
serde = ["dep:serde"]
schemars = ["dep:schemars", "serde"]
manifest = ["dep:cuenv-core"]

[dependencies]
cuenv-core = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
