[package]
name = "cuenv-codeowners"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools", "command-line-utilities"]
readme = "../../readme.md"
description = "Generate CODEOWNERS files with configurable section styles"

[features]
default = []
serde = ["dep:serde"]
schemars = ["dep:schemars", "serde"]

[dependencies]
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
