[package]
name = "cuenv-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and error handling for the cuenv ecosystem"
exclude = [
    "src/target/**",
]

[features]
default = []

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
miette = { workspace = true }
petgraph = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-recursion = "1.1"
async-trait = "0.1"
futures = "0.3"
cuenv-secrets = { workspace = true }
cuenv-1password = { workspace = true }
cuenv-hooks = { workspace = true }
cuenv-cache = { workspace = true }
cuenv-task-graph = { workspace = true }

# Dependencies for task caching and graph
dirs = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
# For input resolution and hashing
globset = "0.4"
regex = "1.10"
walkdir = "2.5"
ignore = "0.4"
hex = "0.4"
cuenv-workspaces = { workspace = true, features = ["detection", "discovery-rust", "discovery-javascript", "parsers-rust", "parsers-javascript"] }
cuenv-events = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
cucumber = { workspace = true }
tokio-test = { workspace = true }
eyre = "0.6"
temp-env = "0.3"
proptest = { workspace = true }
