[package]
name = "cuenv-cli"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Event-driven CLI with inline TUI for cuenv"

[[bin]]
name = "cuenv"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
cuenv-core = { workspace = true }
cuengine = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
walkdir = "2.5"
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
cucumber = { workspace = true }
tokio-test = { workspace = true }
sha2 = { workspace = true }
assert_cmd = "2.1.1"
predicates = "3.1.3"
which = "8.0.0"
