[package]
name = "cuenv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cuenv-cli"
keywords.workspace = true
categories = ["command-line-utilities", "config", "development-tools"]
readme = "../../readme.md"
description = "Event-driven CLI with inline TUI for cuenv"

[[bin]]
name = "cuenv"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["dagger-backend"]
dagger-backend = ["dep:cuenv-dagger"]

[[test]]
name = "bdd"
harness = false

[dependencies]
cuenv-core = { workspace = true }
cuenv-dagger = { workspace = true, optional = true }
cuenv-ci = { workspace = true }
cuenv-events = { workspace = true }
cuenv-ignore = { workspace = true }
cuenv-release = { workspace = true }
cuengine = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
walkdir = "2.5"
dirs = { workspace = true }
ctrlc = "3.4"

[dev-dependencies]
tempfile = { workspace = true }
cucumber = { workspace = true }
tokio-test = { workspace = true }
sha2 = { workspace = true }
assert_cmd = "2.1.1"
predicates = "3.1.3"
which = "8.0.0"
